[package]
name = "kyber-pke"
version = "0.2.0"
edition = "2021"
license = "Apache-2.0"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["kyber1024", "zeroize", "std"]

std = ["byteorder/std"]
kyber1024 = ["pqc_kyber/kyber1024"]
kyber768 = ["pqc_kyber/kyber768"]
kyber512 = ["pqc_kyber/kyber512"]
wasm = ["pqc_kyber/wasm"]
zeroize = ["pqc_kyber/zeroize"]
avx2 = ["pqc_kyber/avx2"]
90s = ["pqc_kyber/90s"]

[dependencies]
pqc_kyber = { version = "0.4.0", features = ["hazmat"] }
byteorder = "1.4.3"
rand = "0.8.5"
